# tridiagonal

./: Equation.hs  LICENSE  OptionsParser.hs  README.md  TDMA.hs  Tridiagonal.hs  TridiagonalArray.hs  TridiagonalList.hs  Unstable.hs  tridiagonal.cabal
