name:                tridiagonal
version:             0.1.0.0
synopsis:            Tridiagonal matrix algorithm implementation in Haskell
-- description:         
homepage:            https://github.com/Demihalf/tridiagonal
license:             BSD3
license-file:        LICENSE
author:              Valery Kharitonov
maintainer:          kharvd@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

executable tridiagonal
  main-is:           Tridiagonal.hs
  other-modules:     TDMA, OptionsParser, Equation
  build-depends:     base >=4.6, array >=0.4, bytestring >=0.10, bytestring-lexing >=0.4
  ghc-options:       -with-rtsopts=-K100M -O3
